added photos to rc car project

--- a/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
+++ b/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
@@ -45,7 +45,7 @@
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Mobile Robot Toolkit" href="../Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" />
-    <link rel="prev" title="Guide on Graduate Research" href="../../Resource/guide.html" />
+    <link rel="prev" title="Autonomous RC Car" href="../Autonomous-RC-Car/auto-racing.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -65,7 +65,7 @@
           <a href="../Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" title="Mobile Robot Toolkit"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../../Resource/guide.html" title="Guide on Graduate Research"
+          <a href="../Autonomous-RC-Car/auto-racing.html" title="Autonomous RC Car"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -152,6 +152,9 @@
 </ul>
 <a class="reference internal image-reference" href="../../../_images/quad250-2.jpg"><img alt="../../../_images/quad250-2.jpg" src="../../../_images/quad250-2.jpg" style="width: 650px;" /></a>
 <p>(I know it&#8217;s generally recommended to put the two antenas at 90 degrees. But I hadn&#8217;t found a good way to mount them in such configuration when I took this photo.)</p>
+<p>(Updated on 10/02/2017)</p>
+<p>More quadrotors (size 250, 150, 130, 90)</p>
+<a class="reference internal image-reference" href="../../../_images/quad_family.jpg"><img alt="../../../_images/quad_family.jpg" src="../../../_images/quad_family.jpg" style="width: 650px;" /></a>
 </div>
 </div>
 
@@ -173,8 +176,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../Resource/guide.html"
-                        title="previous chapter">Guide on Graduate Research</a></p>
+  <p class="topless"><a href="../Autonomous-RC-Car/auto-racing.html"
+                        title="previous chapter">Autonomous RC Car</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html"
                         title="next chapter">Mobile Robot Toolkit</a></p>
@@ -205,7 +208,7 @@
           <a href="../Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" title="Mobile Robot Toolkit"
              >next</a> |</li>
         <li class="right" >
-          <a href="../../Resource/guide.html" title="Guide on Graduate Research"
+          <a href="../Autonomous-RC-Car/auto-racing.html" title="Autonomous RC Car"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
