added a picture of pdb

--- a/_pages/Projects/Autonomous-RC-Car/auto-racing.html
+++ b/_pages/Projects/Autonomous-RC-Car/auto-racing.html
@@ -41,7 +41,7 @@
     <script type="text/javascript" src="../../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Build Your Own Quadrotor" href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" />
@@ -215,10 +215,13 @@
 <dd><ol class="first last arabic simple" start="2">
 <li>The receiver is attached to the plate from the bottom but the antenna are left above.</li>
 <li>The receiver wires and ESC/servo signal wires go below the plate and the connectors could reach the MCU through reserved holes on the plate.</li>
-<li>Make sure the wires don&#8217;t interfere with the belt/gears below the plate.</li>
+<li>Make sure the wires don&#8217;t interfere with the belt/gears below the plate. If organized properly, they shouldn&#8217;t move underneath the deck.</li>
+<li>See the soldering joints I made in the following picture. The input wires from the battery are almost directly connected to the wires to the ESC. Remember to use a wider soldering tip. A very fine tip will not work.</li>
 </ol>
 </dd>
 </dl>
+<a class="reference internal image-reference" href="../../../_images/pdb.jpg"><img alt="../../../_images/pdb.jpg" src="../../../_images/pdb.jpg" style="width: 650px;" /></a>
+<p>And what the car looks like after installing the mounting plate.</p>
 <a class="reference internal image-reference" href="../../../_images/with_deck.jpg"><img alt="../../../_images/with_deck.jpg" src="../../../_images/with_deck.jpg" style="width: 650px;" /></a>
 </div>
 <div class="section" id="e-higher-mouting-plate">
@@ -302,7 +305,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2017, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
 </html>
