--- a/_pages/Resource/guide.html
+++ b/_pages/Resource/guide.html
@@ -41,10 +41,10 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../index.html" />
-    <link rel="next" title="Build Your Own Quadrotor" href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" />
+    <link rel="next" title="Autonomous RC Car" href="../Projects/Autonomous-RC-Car/auto-racing.html" />
     <link rel="prev" title="Useful References" href="literature.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -62,7 +62,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
+          <a href="../Projects/Autonomous-RC-Car/auto-racing.html" title="Autonomous RC Car"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="literature.html" title="Useful References"
@@ -99,8 +99,8 @@
   <p class="topless"><a href="literature.html"
                         title="previous chapter">Useful References</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html"
-                        title="next chapter">Build Your Own Quadrotor</a></p>
+  <p class="topless"><a href="../Projects/Autonomous-RC-Car/auto-racing.html"
+                        title="next chapter">Autonomous RC Car</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
@@ -125,7 +125,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
+          <a href="../Projects/Autonomous-RC-Car/auto-racing.html" title="Autonomous RC Car"
              >next</a> |</li>
         <li class="right" >
           <a href="literature.html" title="Useful References"
@@ -136,7 +136,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2017, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.2.
     </div>
   </body>
 </html>
