updated app note

--- a/_pages/Notes/Embedded-System/Boards/Intel-Edison.html
+++ b/_pages/Notes/Embedded-System/Boards/Intel-Edison.html
@@ -47,7 +47,7 @@
     <link rel="search" title="Search" href="../../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../../index.html" />
     <link rel="up" title="Application Notes" href="../../Application-Notes.html" />
-    <link rel="next" title="Linux Configuration" href="../../Software/linux-configuration.html" />
+    <link rel="next" title="CAN Bus in Linux" href="../Linux/can-bus-in-linux.html" />
     <link rel="prev" title="Raspberry Pi" href="Raspberry-Pi.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -65,7 +65,7 @@
           <a href="../../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../../Software/linux-configuration.html" title="Linux Configuration"
+          <a href="../Linux/can-bus-in-linux.html" title="CAN Bus in Linux"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="Raspberry-Pi.html" title="Raspberry Pi"
@@ -116,8 +116,8 @@
   <p class="topless"><a href="Raspberry-Pi.html"
                         title="previous chapter">Raspberry Pi</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../../Software/linux-configuration.html"
-                        title="next chapter">Linux Configuration</a></p>
+  <p class="topless"><a href="../Linux/can-bus-in-linux.html"
+                        title="next chapter">CAN Bus in Linux</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../../search.html" method="get">
@@ -142,7 +142,7 @@
           <a href="../../../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../../Software/linux-configuration.html" title="Linux Configuration"
+          <a href="../Linux/can-bus-in-linux.html" title="CAN Bus in Linux"
              >next</a> |</li>
         <li class="right" >
           <a href="Raspberry-Pi.html" title="Raspberry Pi"
