--- a/_pages/Projects/Autonomous-RC-Car/auto-racing.html
+++ b/_pages/Projects/Autonomous-RC-Car/auto-racing.html
@@ -47,7 +47,7 @@
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Build Your Own Quadrotor" href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" />
-    <link rel="prev" title="How to Install Eclipse CDT with Java 8" href="../../Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" />
+    <link rel="prev" title="Using GDB Debugger" href="../../Notes/Software/gdb.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -67,7 +67,7 @@
           <a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../../Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" title="How to Install Eclipse CDT with Java 8"
+          <a href="../../Notes/Software/gdb.html" title="Using GDB Debugger"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -291,8 +291,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html"
-                        title="previous chapter">How to Install Eclipse CDT with Java 8</a></p>
+  <p class="topless"><a href="../../Notes/Software/gdb.html"
+                        title="previous chapter">Using GDB Debugger</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html"
                         title="next chapter">Build Your Own Quadrotor</a></p>
@@ -323,7 +323,7 @@
           <a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              >next</a> |</li>
         <li class="right" >
-          <a href="../../Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" title="How to Install Eclipse CDT with Java 8"
+          <a href="../../Notes/Software/gdb.html" title="Using GDB Debugger"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
