updated copyright info

--- a/_pages/Notes/Embedded-System/Linux/linux-configuration.html
+++ b/_pages/Notes/Embedded-System/Linux/linux-configuration.html
@@ -47,7 +47,7 @@
     <link rel="search" title="Search" href="../../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../../index.html" />
     <link rel="up" title="Application Notes" href="../../Application-Notes.html" />
-    <link rel="next" title="Build Custom Linux" href="build-custom-linux.html" />
+    <link rel="next" title="Xenomai on Beaglebone" href="beaglebone-xenomai.html" />
     <link rel="prev" title="CAN Bus in Linux" href="can-bus-in-linux.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -65,7 +65,7 @@
           <a href="../../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="build-custom-linux.html" title="Build Custom Linux"
+          <a href="beaglebone-xenomai.html" title="Xenomai on Beaglebone"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="can-bus-in-linux.html" title="CAN Bus in Linux"
@@ -159,8 +159,8 @@ iface wlan0 inet dhcp
   <p class="topless"><a href="can-bus-in-linux.html"
                         title="previous chapter">CAN Bus in Linux</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="build-custom-linux.html"
-                        title="next chapter">Build Custom Linux</a></p>
+  <p class="topless"><a href="beaglebone-xenomai.html"
+                        title="next chapter">Xenomai on Beaglebone</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../../search.html" method="get">
@@ -185,7 +185,7 @@ iface wlan0 inet dhcp
           <a href="../../../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="build-custom-linux.html" title="Build Custom Linux"
+          <a href="beaglebone-xenomai.html" title="Xenomai on Beaglebone"
              >next</a> |</li>
         <li class="right" >
           <a href="can-bus-in-linux.html" title="CAN Bus in Linux"
@@ -196,7 +196,7 @@ iface wlan0 inet dhcp
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2017, Ruixiang Du.
+        &copy; Copyright 2019, Ruixiang Du.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.7.
     </div>
   </body>
