--- a/_pages/Knowledge-Base/Literature/BookList.html
+++ b/_pages/Knowledge-Base/Literature/BookList.html
@@ -47,7 +47,7 @@
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Software Tools" href="../../Resource/software.html" />
-    <link rel="prev" title="Computer Science" href="../Computer-Science/Computer-Science.html" />
+    <link rel="prev" title="Computing" href="../Computing/Computing.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -67,7 +67,7 @@
           <a href="../../Resource/software.html" title="Software Tools"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../Computer-Science/Computer-Science.html" title="Computer Science"
+          <a href="../Computing/Computing.html" title="Computing"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -171,8 +171,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../Computer-Science/Computer-Science.html"
-                        title="previous chapter">Computer Science</a></p>
+  <p class="topless"><a href="../Computing/Computing.html"
+                        title="previous chapter">Computing</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../../Resource/software.html"
                         title="next chapter">Software Tools</a></p>
@@ -203,14 +203,14 @@
           <a href="../../Resource/software.html" title="Software Tools"
              >next</a> |</li>
         <li class="right" >
-          <a href="../Computer-Science/Computer-Science.html" title="Computer Science"
+          <a href="../Computing/Computing.html" title="Computing"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2017, Ruixiang Du.
+        &copy; Copyright 2019, Ruixiang Du.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.7.
     </div>
   </body>
