--- a/_pages/Knowledge-Base/Robotics/Robotics.html
+++ b/_pages/Knowledge-Base/Robotics/Robotics.html
@@ -46,8 +46,8 @@
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
-    <link rel="next" title="Unmanned Aerial Vehicles" href="../Unmanned_Aerial_Vehicles/UAV.html" />
-    <link rel="prev" title="How to Install Eclipse CDT with Java 8" href="../../Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" />
+    <link rel="next" title="Computing" href="../Computing/Computing.html" />
+    <link rel="prev" title="Mobile Robot Toolkit" href="../../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -64,10 +64,10 @@
           <a href="../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../Unmanned_Aerial_Vehicles/UAV.html" title="Unmanned Aerial Vehicles"
+          <a href="../Computing/Computing.html" title="Computing"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../../Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" title="How to Install Eclipse CDT with Java 8"
+          <a href="../../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" title="Mobile Robot Toolkit"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -264,11 +264,11 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html"
-                        title="previous chapter">How to Install Eclipse CDT with Java 8</a></p>
+  <p class="topless"><a href="../../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html"
+                        title="previous chapter">Mobile Robot Toolkit</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../Unmanned_Aerial_Vehicles/UAV.html"
-                        title="next chapter">Unmanned Aerial Vehicles</a></p>
+  <p class="topless"><a href="../Computing/Computing.html"
+                        title="next chapter">Computing</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
@@ -293,18 +293,18 @@
           <a href="../../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../Unmanned_Aerial_Vehicles/UAV.html" title="Unmanned Aerial Vehicles"
+          <a href="../Computing/Computing.html" title="Computing"
              >next</a> |</li>
         <li class="right" >
-          <a href="../../Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" title="How to Install Eclipse CDT with Java 8"
+          <a href="../../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" title="Mobile Robot Toolkit"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2017, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.5.
+        &copy; Copyright 2019, Ruixiang Du.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.7.
     </div>
   </body>
 </html>
