--- a/_pages/Notes/HOWTOs/howto-connect-sbc-to-wpi-wireless.html
+++ b/_pages/Notes/HOWTOs/howto-connect-sbc-to-wpi-wireless.html
@@ -46,9 +46,9 @@
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
-    <link rel="up" title="HOWTOs" href="../HOWTOs.html" />
+    <link rel="up" title="Application Notes" href="../Application-Notes.html" />
     <link rel="next" title="How to Connect to WPI VPN in Linux" href="howto-connect-to-wpi-vpn-off-campus.html" />
-    <link rel="prev" title="HOWTOs" href="../HOWTOs.html" />
+    <link rel="prev" title="Using Valgrind" href="../Programming/valgrind.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -68,11 +68,11 @@
           <a href="howto-connect-to-wpi-vpn-off-campus.html" title="How to Connect to WPI VPN in Linux"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../HOWTOs.html" title="HOWTOs"
+          <a href="../Programming/valgrind.html" title="Using Valgrind"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li>
-          <li class="nav-item nav-item-1"><a href="../HOWTOs.html" accesskey="U">HOWTOs</a> &raquo;</li> 
+          <li class="nav-item nav-item-1"><a href="../Application-Notes.html" accesskey="U">Application Notes</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -211,8 +211,8 @@ iface wlan0 inet dhcp
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../HOWTOs.html"
-                        title="previous chapter">HOWTOs</a></p>
+  <p class="topless"><a href="../Programming/valgrind.html"
+                        title="previous chapter">Using Valgrind</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="howto-connect-to-wpi-vpn-off-campus.html"
                         title="next chapter">How to Connect to WPI VPN in Linux</a></p>
@@ -243,15 +243,15 @@ iface wlan0 inet dhcp
           <a href="howto-connect-to-wpi-vpn-off-campus.html" title="How to Connect to WPI VPN in Linux"
              >next</a> |</li>
         <li class="right" >
-          <a href="../HOWTOs.html" title="HOWTOs"
+          <a href="../Programming/valgrind.html" title="Using Valgrind"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li>
-          <li class="nav-item nav-item-1"><a href="../HOWTOs.html" >HOWTOs</a> &raquo;</li> 
+          <li class="nav-item nav-item-1"><a href="../Application-Notes.html" >Application Notes</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2017, Ruixiang Du.
+        &copy; Copyright 2019, Ruixiang Du.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.7.
     </div>
   </body>
