updated copyright year

--- a/_pages/Notes/HOWTOs/howto-recover-swd-after-disabled-with-jlink.html
+++ b/_pages/Notes/HOWTOs/howto-recover-swd-after-disabled-with-jlink.html
@@ -5,18 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-67949307-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+    
     <!-- <title>How to Recover SWD after Disabed with JLink &mdash; RDU-Wiki 1.0 documentation</title> -->
     <title>How to Recover SWD after Disabed with JLink</title>
     
@@ -46,6 +35,9 @@
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
+    <link rel="up" title="Application Notes" href="../Application-Notes.html" />
+    <link rel="next" title="How to Connect a Single-board Computer to WPI Wireless" href="howto-connect-sbc-to-wpi-wireless.html" />
+    <link rel="prev" title="Using Valgrind" href="../Programming/valgrind.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -61,8 +53,15 @@
         <li class="right" style="margin-right: 10px">
           <a href="../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
+        <li class="right" >
+          <a href="howto-connect-sbc-to-wpi-wireless.html" title="How to Connect a Single-board Computer to WPI Wireless"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
+          <a href="../Programming/valgrind.html" title="Using Valgrind"
+             accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
-        <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li>
+          <li class="nav-item nav-item-1"><a href="../Application-Notes.html" accesskey="U">Application Notes</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -98,6 +97,12 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
+  <h4>Previous topic</h4>
+  <p class="topless"><a href="../Programming/valgrind.html"
+                        title="previous chapter">Using Valgrind</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="howto-connect-sbc-to-wpi-wireless.html"
+                        title="next chapter">How to Connect a Single-board Computer to WPI Wireless</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
@@ -121,13 +126,20 @@
         <li class="right" style="margin-right: 10px">
           <a href="../../../genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="howto-connect-sbc-to-wpi-wireless.html" title="How to Connect a Single-board Computer to WPI Wireless"
+             >next</a> |</li>
+        <li class="right" >
+          <a href="../Programming/valgrind.html" title="Using Valgrind"
+             >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
-        <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li>
+          <li class="nav-item nav-item-1"><a href="../Application-Notes.html" >Application Notes</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2019, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.7.
+        &copy; Copyright 2020, Ruixiang Du.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.6.7.
     </div>
   </body>
 </html>
