--- a/_pages/Projects/Autonomous-RC-Car/auto-racing.html
+++ b/_pages/Projects/Autonomous-RC-Car/auto-racing.html
@@ -5,18 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-67949307-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+    
     <!-- <title>Autonomous RC Car &mdash; RDU-Wiki 1.0 documentation</title> -->
     <title>Autonomous RC Car</title>
     
@@ -47,7 +36,7 @@
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Build Your Own Quadrotor" href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" />
-    <link rel="prev" title="How to Connect to WPI VPN in Linux" href="../../Notes/HOWTOs/howto-connect-to-wpi-vpn-off-campus.html" />
+    <link rel="prev" title="How to Use Tools in Linux" href="../../Notes/HOWTOs/howto-use-linux-tools.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -67,7 +56,7 @@
           <a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../../Notes/HOWTOs/howto-connect-to-wpi-vpn-off-campus.html" title="How to Connect to WPI VPN in Linux"
+          <a href="../../Notes/HOWTOs/howto-use-linux-tools.html" title="How to Use Tools in Linux"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -291,8 +280,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../Notes/HOWTOs/howto-connect-to-wpi-vpn-off-campus.html"
-                        title="previous chapter">How to Connect to WPI VPN in Linux</a></p>
+  <p class="topless"><a href="../../Notes/HOWTOs/howto-use-linux-tools.html"
+                        title="previous chapter">How to Use Tools in Linux</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html"
                         title="next chapter">Build Your Own Quadrotor</a></p>
@@ -323,15 +312,15 @@
           <a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              >next</a> |</li>
         <li class="right" >
-          <a href="../../Notes/HOWTOs/howto-connect-to-wpi-vpn-off-campus.html" title="How to Connect to WPI VPN in Linux"
+          <a href="../../Notes/HOWTOs/howto-use-linux-tools.html" title="How to Use Tools in Linux"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2019, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.7.
+        &copy; Copyright 2020, Ruixiang Du.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.6.7.
     </div>
   </body>
 </html>
